<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RetryAddPatientActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retry_add" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/first_name"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/last_name" />

    <EditText
        android:id="@+id/day"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/last_name"
        android:layout_below="@+id/birthdate_header"
        android:ems="10"
        android:hint="@string/day" />

    <EditText
        android:id="@+id/month"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/birthdate_header"
        android:layout_toRightOf="@+id/day"
        android:ems="10"
        android:hint="@string/month" />

    <TextView
        android:id="@+id/birthdate_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/last_name"
        android:layout_toRightOf="@+id/day"
        android:text="@string/birthdate_name" />

    <EditText
        android:id="@+id/healthcard_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/day"
        android:layout_below="@+id/year"
        android:ems="10"
        android:hint="@string/healthcard_number" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/year"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/month"
        android:layout_alignBottom="@+id/month"
        android:layout_toRightOf="@+id/birthdate_header"
        android:ems="10"
        android:hint="@string/year" />

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="90dp"
        android:onClick="createNewPatient"
        android:text="@string/add" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/last_name"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="39dp"
        android:ems="10"
        android:hint="@string/first_name" />

</RelativeLayout>