<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EnterUpdateInfoActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_update" />

    <EditText
        android:id="@+id/seen_by_doctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/symptoms"
        android:layout_alignTop="@+id/symptoms"
        android:layout_marginTop="46dp"
        android:ems="10"
        android:hint="@string/seen_by_doctor" />

    <EditText
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:ems="10"
        android:hint="@string/temperature" />

    <EditText
        android:id="@+id/blood_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/temperature"
        android:layout_below="@+id/temperature"
        android:ems="10"
        android:hint="@string/blood_pressure" />

    <EditText
        android:id="@+id/heart_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/blood_pressure"
        android:layout_below="@+id/blood_pressure"
        android:ems="10"
        android:hint="@string/heart_rate" />

    <EditText
        android:id="@+id/symptoms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/heart_rate"
        android:layout_below="@+id/heart_rate"
        android:ems="10"
        android:hint="@string/symptoms" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/update_patient_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seen_by_doctor"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:onClick="updatePatient"
        android:text="@string/update_patient_info" />

</RelativeLayout>