<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterNurseActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_register" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/last_name"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/first_name" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/first_name"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/last_name" />

    <EditText
        android:id="@+id/choose_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/last_name"
        android:layout_below="@+id/last_name"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:hint="@string/choose_username" />

    <EditText
        android:id="@+id/choose_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/choose_username"
        android:layout_below="@+id/choose_username"
        android:ems="10"
        android:hint="@string/choose_password" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/register_nurse_botton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/choose_password"
        android:layout_below="@+id/choose_password"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="76dp"
        android:onClick="registerNurse"
        android:text="@string/register_nurse_button" />

</RelativeLayout>