<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AccessRecordActivity" >

    <Button
        android:id="@+id/find_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idnumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:onClick="getRecord"
        android:text="@string/find_record" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/idnumber"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="88dp"
        android:text="@string/enter_healthnumber" />

    <EditText
        android:id="@+id/idnumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="149dp"
        android:ems="10"
        android:hint="@string/idnumber" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:text="@string/not_checked_in_access"
        android:visibility="invisible" />

</RelativeLayout>